# cpp-boilerplate

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc  main.cpp
src/libs/: CMakeLists.txt  utils.cc  utils.cpp  utils.h
tests/: CMakeLists.txt  test_object.cc  test_utils.cc  test_utils.cpp
